# aversive_analysis_2025

./: README.md  pyproject.toml
aversive_scripts_2025/: APdecoding_funs.py  mCCA.py  main_figures.py  processing_functions.py  project_parameters.py  simulation_controls.py
