[tool.poetry]
name = "low-d-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "low_d_analysis"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
tensorflow = "2.10"
numba = "^0.56.4"
spyder = "^5.4.2"
scipy = ">=1.3,<1.9"
matplotlib = "^3.6.3"
seaborn = "^0.12.2"
networkx = "^3.0"
scikit-learn = "^1.2.1"
statsmodels = "^0.13.5"
xgboost = "^1.7.3"
tensortools = {git = "https://github.com/ahwillia/tensortools"}
neural-decoding = "^0.1.5"
svgutils = "^0.3.4"
svglib = "^1.5.1"
cython = "^3.0.8"
numexpr = "^2.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
